--- a/airbnb-clone/src/App.css
+++ b/airbnb-clone/src/App.css
@@ -5,13 +5,15 @@
 
 body{
   margin: 0;
-  font-family: 'Poppins' sans-serif;
+  font-family: 'Poppins' , sans-serif;
 
 }
+
 
 nav{
   height: 75px;
   display: flex;
+
   box-shadow: 0px 2.98256px 7.4564px rgba(0,0,0,0.1);
 }
 
@@ -53,13 +55,28 @@ section{
   margin-top: 0;
 }
 
+.cards-list {
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 20px;
+  overflow-x: auto;
+}
+
 .card{
   width: 175px;
   font-size: 12px;
+  flex: 0 0 auto;         /* ADD */
+  display: flex;          /* ADD */
+  flex-direction: column; /* ADD */
 }
-
 .card--image{
   width: 100%;
+  margin-bottom: 9px;
+}
+
+.card--title {
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .card--stats{
@@ -68,7 +85,7 @@ section{
 }
 
 .card--star{
-  width: 50px
+  width: 20px
   
 }
 
