--- a/airbnb-clone/src/App.css
+++ b/airbnb-clone/src/App.css
@@ -65,9 +65,10 @@ section{
 .card{
   width: 175px;
   font-size: 12px;
-  flex: 0 0 auto;         /* ADD */
-  display: flex;          /* ADD */
-  flex-direction: column; /* ADD */
+  flex: 0 0 auto;         
+  display: flex;          
+  flex-direction: column;
+  position: relative;
 }
 .card--image{
   width: 100%;
@@ -89,3 +90,13 @@ section{
   
 }
 
+
+.card--badge{
+  position: absolute;
+  top: 6px;
+  left: 6px;
+  background-color: white;
+  padding: 5px 7px;
+  border-radius: 2px;
+  font-weight: bold;
+}
